--- a/index.html
+++ b/index.html
@@ -1,35 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Mizoram First - Ideological Foundation</title>
+	<!DOCTYPE html>
+	<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>MIZORAM FIRST - Ideological Foundation</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-<body>
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	</head>
+	<body>
 
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-8 offset-md-2">
-                <h1>Mizoram First</h1>
-                <p><em>(Ideological Foundation)</em></p>
+		<div class="container mt-5">
+			<div class="row">
+				<div class="col-md-8 offset-md-2">
+					<h1>MIZORAM FIRST</h1>
+					<p><em>(Ideological Foundation)</em></p>
+					<ol>
+						<li>
+						MIZORAM FIRST chu thil dang zawng zawng aia Mizoram thatna tur dah pawimawh berna hi a ni. Mimal hlawkna tur emaw, party emaw, khua/veng hlawkna tur aia Mizoram pumpui leh Zofate thatna tur dah pawimawh berna, ram leh hnam hmangaihna dik tak hi a ni.
 
-                <p>Mizoram First chu thil dang zawng zawng aia Mizoram thatna tur dah pawimawh berna hi a ni. Mimal hlawkna tur emaw, party emaw, khua/veng hlawkna tur aia Mizoram pumpui leh Zofate thatna tur dah pawimawh berna, ram leh hnam hmangaihna dik tak hi a ni...</p>
+						</li>
+						<li>
+						MIZORAM FIRST chu, miin a ram hmasawnna leh thatna tura a theihna sang ber hlan tuma beihna rilru, leh “ka ram leh hnam tan enge ka tih ve ang?’ tia ram tana a theihna a pek let ve duhna hi a ni. Eng hnathawk pawh, eng dinhmuna ding pawhin, a hnathawh, a zirna leh a awmna hmun atanga Mizoram tana a tih theih sang ber leh tha bera a thawhna hi a ni. Sorkar thupek emaw, miin an fakna tur emaw, hlawk leh larna tur ni lo mahse, Mizoram leh Hnam, Zofate tana a that dawn phawt chuan tuma hriat loh pawha lo beih ngar ngarna hi ‘MIZORAM FIRST’ chu a ni. 
 
-                <!-- Add more content as needed -->
+						</li>
+						<li>MIZORAM FIRST rilru chu neitu rilru putna a ni. Mizo nih hi kan inchhuang a, Mizoram neitu kan ni. Hei lo hi ram dang kan nei lo va, kan nei bawk hek lo vang. Kan ram leh hnam a ral chuan keini pawh kan ral ve dawn a, chuvangin kan tu leh fate chenna tur kan ram neihchhun Mizoram hi uluk leh duat taka enkawl hi Zofate zawng zawngin kan tihtur a ni tih pawmna hi MIZORAM FIRST rilru a ni.
+						</li>
+						<li>MIZORAM FIRST chu mahni hnampuite duhsakna leh lainatna rilru hi a ni. Mahni hnampuite rethei leh harsa taka an awm laia mahni lo inhaivura lo len thur thur bik duh lohna rilru, a hnampuite chanai laksaka lo chenralsak/chheprelhsak duh lohna rilru, a nei zawkten a hnampui harsa zawkte a peizawnna rilru, duhsak taka an lo changkan leh lei rem an rah ve theihna tura thawh duhna. a tan harsain hreawm deuh mahse a hnampui harsa zawkte tana malsawmna ni tura tuar hram hram ngamna hi a ni. 
+						</li>
+						<li>
+						MIZORAM FIRST rilru chu, a hnampuite leh Mizoram tana tha chu ama tan pawh a tha a ni, tih hriatna leh pawmna, induhsak tawnna hi a ni. Mizoram pumpui leh Zofate zawng zawng tan a ngaihtuah avangin a awmna veng, khua, party, etc. chauh ngaihtuah lovin, Mizoram pumpui atana tha turin a ngaihtuah thin. Mizoram pum tana a that dawn phawt chuan, amah emaw, an veng/constituency chuan lo chan rih dawn mahse, Mizoram zimteah amah ngei pawhin a la hmang tangkai leh tho dawn tih a hriat avanga a pawm/chan ngamna hi a ni. 
+						</li>
+						<li>
+						MIZORAM FIRST chu huaisen taka mahni hmun theuha dik lo leh tha lo tih duh loh tlat hi a ni. Tumahin hmu lo mahse, mahni hna rinawm taka thawhte, mahni hmuna rinawm taka thil dik lo tih duh loh leh thamna dawn duh loh hi hnam kan hmangaihna tihlanna kawng a ni. 
+						</li>
+						<li>
+						MIZORAM FIRST chu neitu rilru pu lova hnathawh reng reng dodalna hi a ni. Ram pum huap emaw, mahni khua, veng leh chhungkua ah pawh Mizoram leh hnam hmasawnna tur dah pawimawh ber lova mahni hlawkna tur chauh emaw, Mizoram tlakranna tur kawnga hnathawh reng reng dodala beih hi MIZORAM FIRST rilru putna a ni.
+						</li>
+						</li>
+						MIZORAM FIRST rilru hi a Kristian em em a ni. Mahni hmasial leh inhaivur bik duh lohna, midangte tana malsawmna ni tura thawh duhna, hma lam hun tawite, tuna kan hlawk nghalna tur chauh thlir lo va thui tak thlir theihna rilru a nih avangin Kristian zirtirna nen a inmil em em a ni.
+						</li>
+						
 
-                <p><strong>***</strong></p>
+					</ol>
+					<p>Mizoram First chu thil dang zawng zawng aia Mizoram thatna tur dah pawimawh berna hi a ni. Mimal hlawkna tur emaw, party emaw, khua/veng hlawkna tur aia Mizoram pumpui leh Zofate thatna tur dah pawimawh berna, ram leh hnam hmangaihna dik tak hi a ni...</p>
 
-                <p>Mizoram First chu mahni chanvo hriata chumi an chang lo anih chuan huaisen taka beih ngamna hi a ni.</p>
-            </div>
-        </div>
-    </div>
+					<!-- Add more content as needed -->
 
-    <!-- Bootstrap JS and dependencies (optional) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</body>
-</html>
+					<p><strong>***</strong></p>
+
+					<p>Mizoram First chu mahni chanvo hriata chumi an chang lo anih chuan huaisen taka beih ngamna hi a ni.</p>
+				</div>
+			</div>
+		</div>
+
+		<!-- Bootstrap JS and dependencies (optional) -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	</body>
+	</html>
