--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
 
 <div class="p-5 bg-primary text-white text-center">
-  <h1>My First Bootstrap 5 Page</h1>
-  <p>Resize this responsive page to see the effect!</p> 
+  <h1>MIZORAM FIRST</h1>
+  <p><i>I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.</i></p> 
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
