--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
   </style>
 </head>
 <body>
-
-<div class="p-5 bg-primary text-white text-center">
+<div class="container">
+<div class="p-5 bg-green text-white text-center">
   <h1>MIZORAM FIRST</h1>
   <p><i>I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.</i></p> 
 </div>
 
-<p style="text-align: center;"><strong><span style="font-size: 30px;">MIZORAM FIRST</span></strong></p>
 <p style="text-align: center;"><span style="font-size:12pt;">INTRODUCTORY NOTE</span></p>
 <p style="text-align: center;"><br></p>
 <p><span style="font-size:12pt;">MIZORAM FIRST pawl hi political party awn lam nei lo, Mizoram veitu kal khawmten March 2, 2022-a an din a ni. &lsquo;Mizoram First&rsquo; tih chu &lsquo;Mizoram dah pawimawh hmasak berna rilru&rsquo; tihna a ni ber a. Mimal hlawkna, party bil leh party member-te hlawkna aia Mizoram leh mipui thatna tur ngaihpawimawh hmasak duhna rilru, mikhual rilru ni loa neitu rilru putna hi &lsquo;Mizoram First&rsquo; tih in a kawh ber chu a ni.&nbsp;</span></p>
@@ -71,6 +70,6 @@
 <div class="mt-5 p-4 bg-dark text-white text-center">
   <p>MIZORAM FIRST</p>
 </div>
-
+</div>
 </body>
 </html>
