--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="container">
-<div class="p-5 text-white text-center mf-board">
+<div class="p-5 br-success text-white text-center mf-board">
   <h1>MIZORAM FIRST</h1>
   <p><i>I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.</i></p> 
 </div>
