--- a/index.html
+++ b/index.html
@@ -1,75 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap 5 Website Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-  .fakeimg {
-    height: 200px;
-    background: #aaa;
-  }
-  </style>
-</head>
-<body>
-<div class="container">
-<div class="p-5 bg-success text-white text-center mf-board">
-  <h1>MIZORAM FIRST</h1>
-  <p><i>I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.</i></p> 
+<div class="background">
 </div>
 
-<p style="text-align: center;"><span style="font-size:12pt;">INTRODUCTORY NOTE</span></p>
-<p style="text-align: center;"><br></p>
-<p><span style="font-size:12pt;">MIZORAM FIRST pawl hi political party awn lam nei lo, Mizoram veitu kal khawmten March 2, 2022-a an din a ni. &lsquo;Mizoram First&rsquo; tih chu &lsquo;Mizoram dah pawimawh hmasak berna rilru&rsquo; tihna a ni ber a. Mimal hlawkna, party bil leh party member-te hlawkna aia Mizoram leh mipui thatna tur ngaihpawimawh hmasak duhna rilru, mikhual rilru ni loa neitu rilru putna hi &lsquo;Mizoram First&rsquo; tih in a kawh ber chu a ni.&nbsp;</span></p>
-<p><span style="font-size:12pt;">Mizoram hi kan ram, kan ta a ni. A neitu kan nih avangin kan ram chhiat-ṭhat, a dinchhuahna leh boralna pawh Mizote kutah a awm. Kan chhehvelah keini aia tam leh fing zawkte, kan sakhua leh culture nena inang reng reng loten min hual vel a. Kan ram min neihsak chak em emte kan chenpui reng bawk. Chutih lai chuan Mizoram neitute chuan hnam hmangaihna thinlung tak tak pu lova, hmathlir engmah nei lova mahni hlawkna chauh kan um zel chuan kan ram leh hnam a boral dawn.&nbsp;</span></p>
-<p><span style="font-size:12pt;">Chuvangin, tuna Mizoramin a mamawh ber chu ram leh hnam hmangaihna (patriotism), mahni hlawkna tur aia ram leh hnam damna tur dah hmasak, Kristianna hming tibawrhbangtu ni lova chawisang tura rinawmna, dikna leh huaisenna nena ke pen a ni. Chu chu &lsquo;MIZORAM FIRST&rsquo; in a tum ril ber a ni.</span></p>
-<p><span style="font-size:12pt;">&lsquo;MIZORAM FIRST&rsquo; rilru put hi midang tan ni lovin, keimahni tan ṭheuh, kan chhungkua, kan veng, khawtlang leh hnam tan a tul a ni.&nbsp;</span><strong><span style="font-size:12pt;">He ram lo hi ram dang kan nei lo a, kan nei dawn hek lo. Ram leh hnam hmangaihna (patriotism) nunpuia, kan hnam leh kan thlahte tana chenna tlak ram siam hi mi tin mawhphurhna a ni tih mipui hriat thar tir hi &lsquo;MIZORAM FIRST&rsquo; awm chhan a ni</span></strong><span style="font-size:12pt;">.&nbsp;</span></p>
-<p style="text-align: justify;"><br></p>
-<p style="text-align: justify;"><strong><span style="font-size:12pt;">Mission and Vision:</span></strong></p>
-<p style="text-align: justify;"><span style="font-size:12pt;">Mi tha leh dik, ram hmangaihtu an lo chhuah theihna tura kawng sial leh a chhe lai siam that.&nbsp;</span></p>
-<p style="text-align: justify;"><br></p>
-<p style="text-align: justify;"><strong><span style="font-size:12pt;">Thil tum (Objectives):</span></strong></p>
-<ol>
-    <li style="list-style-type:decimal;font-size:12pt;">
-        <p style="text-align: justify;"><span style="font-size:12pt;">Kan ram leh hnam hmangaihna rilru dik tak (Mizoram dah hmasak berna rilru) pu tura infuih thar.</span></p>
-    </li>
-    <li style="list-style-type:decimal;font-size:12pt;">
-        <p style="text-align: justify;"><span style="font-size:12pt;">Mizo ngaihhlut thiltha (values) vawn nun leh chawi lar thar leh.</span></p>
-    </li>
-    <li style="list-style-type:decimal;font-size:12pt;">
-        <p style="text-align: justify;"><span style="font-size:12pt;">Sorkar tha siam thei tura mipui buatsaih leh zirtir.</span></p>
-    </li>
-    <li style="list-style-type:decimal;font-size:12pt;">
-        <p style="text-align: justify;"><span style="font-size:12pt;">Thalaite ram siamthatna hna thawk tura cho chhuah leh thawhpui.</span></p>
-    </li>
-    <li style="list-style-type:decimal;font-size:12pt;">
-        <p style="text-align: justify;"><span style="font-size:12pt;">Kan ram leh hnam hmakhua atana ngaihtuahna senga thil tha tur chhawpchhuah dan ngaihtuah.&nbsp;</span></p>
-    </li>
-    <li style="list-style-type:decimal;font-size:12pt;">
-        <p style="text-align: justify;"><span style="font-size:12pt;">Ram hmangaihtu leh veitu zawng zawng an tel theihna tur hmun (platform) siam.</span></p>
-    </li>
-    <li style="list-style-type:decimal;font-size:12pt;">
-        <p style="text-align: justify;"><span style="font-size:12pt;">Mitinin kan chanvo dik tak kan chan theih nana dan rorelna (&lsquo;rule of law&rsquo; leh &lsquo;principle of justice&rsquo;) kan rama a lal ber zel theih nana hma lak.</span></p>
-    </li>
-    <li style="list-style-type:decimal;font-size:12pt;">
-        <p style="text-align: justify;"><span style="font-size:12pt;">Eirukna leh ram leh hnam him lohna tur thil dodal.</span></p>
-    </li>
-</ol>
-<p><br></p>
-<p style="text-align: center;"><span style="font-size:13.999999999999998pt;">MIZORAM FIRST pawl hi political party-a inleh kan tum lo va. Ram vei tupawh lo tel turin kan insawm e.&nbsp;</span></p>
-<p style="text-align: center;"><span style="font-size:13.999999999999998pt;">I RAM LEH HNAM A BORAL CHUAN NANG LEH I CHHUNGTE IN HIM BIK LO VANG</span></p>
-<p><br></p>
-<p style="text-align: center;"><span style="font-size:13.999999999999998pt;">****************</span></p>
-<p><br></p>
-<p style="text-align: justify;"><span style="font-size:12pt;">&nbsp; &nbsp;&nbsp;</span></p>
-<p><br></p>
-<p><br></p>
+<article class="wrapper">
+  <header>
+    <h1 class="pageTitle">Parallax scrolling</h1>
+    <h2 class="pageSubTitle">With a little bit of jQuery</h2>
+  </header>
+  <section>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat tortor a turpis mattis, in blandit orci venenatis. Quisque justo lacus, rutrum mattis tortor et, aliquam auctor risus. Mauris quis elit turpis. Morbi non nisl nunc. Duis elit quam, lobortis eget pretium sed, eleifend eu dui. Sed molestie ornare suscipit. Phasellus facilisis at quam sed tincidunt. Phasellus eget odio laoreet, dictum augue ac, dictum lorem. Nulla facilisi. Phasellus elit augue, cursus eu ante nec, vestibulum adipiscing mi. Nunc adipiscing nibh risus, sed auctor sapien sodales in. Morbi in purus diam. In id consequat velit, eget sodales enim. Nam a massa sed orci blandit interdum eget et ligula. Pellentesque laoreet semper vulputate.</p>
 
-<div class="mt-5 p-4 bg-dark text-white text-center">
-  <p>MIZORAM FIRST</p>
-</div>
-</div>
-</body>
-</html>
+    <p>Proin laoreet molestie mi ac mattis. Curabitur velit lorem, euismod eget leo sed, imperdiet ullamcorper mauris. Fusce posuere dapibus eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper massa lectus, et tempor orci dapibus non. Pellentesque id enim commodo, scelerisque augue in, pharetra purus. Donec leo odio, consequat non tellus tincidunt, rhoncus porta urna.</p>
+
+    <p>Aenean tincidunt sed metus et mollis. Pellentesque tristique risus ac suscipit ornare. Sed a tempor nisl. Nam imperdiet mauris vel nunc varius, id volutpat elit porta. Etiam eu consectetur dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean sollicitudin fermentum nulla, eu ultricies orci imperdiet sed. Cras vitae quam blandit quam volutpat tincidunt vel vel quam. Ut id dictum nisl, nec commodo augue. Donec sed imperdiet arcu, nec ullamcorper ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis id egestas est. Pellentesque eleifend, nisi quis eleifend blandit, lacus ligula tempus quam, non sagittis eros tortor vel massa. Duis posuere pellentesque arcu in sollicitudin.</p>
+  </section>
+</article>
+
+<article class="wrapper">
+  <header>
+    <h1 class="pageTitle">Another title</h1>
+    <h2 class="pageSubTitle">With just another subtitle</h2>
+  </header>
+  <section>
+    <p>Proin laoreet molestie mi ac mattis. Curabitur velit lorem, euismod eget leo sed, imperdiet ullamcorper mauris. Fusce posuere dapibus eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper massa lectus, et tempor orci dapibus non. Pellentesque id enim commodo, scelerisque augue in, pharetra purus. Donec leo odio, consequat non tellus tincidunt, rhoncus porta urna.</p>
+
+    <p>Aenean tincidunt sed metus et mollis. Pellentesque tristique risus ac suscipit ornare. Sed a tempor nisl. Nam imperdiet mauris vel nunc varius, id volutpat elit porta. Etiam eu consectetur dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean sollicitudin fermentum nulla, eu ultricies orci imperdiet sed. Cras vitae quam blandit quam volutpat tincidunt vel vel quam. Ut id dictum nisl, nec commodo augue. Donec sed imperdiet arcu, nec ullamcorper ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis id egestas est. Pellentesque eleifend, nisi quis eleifend blandit, lacus ligula tempus quam, non sagittis eros tortor vel massa. Duis posuere pellentesque arcu in sollicitudin.</p>
+  </section>
+</article>
+
+<article class="wrapper">
+  <header>
+    <h1 class="pageTitle">Again another title</h1>
+    <h2 class="pageSubTitle">And again another subtitle</h2>
+  </header>
+  <section>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat tortor a turpis mattis, in blandit orci venenatis. Quisque justo lacus, rutrum mattis tortor et, aliquam auctor risus. Mauris quis elit turpis. Morbi non nisl nunc. Duis elit quam, lobortis eget pretium sed, eleifend eu dui. Sed molestie ornare suscipit. Phasellus facilisis at quam sed tincidunt. Phasellus eget odio laoreet, dictum augue ac, dictum lorem. Nulla facilisi. Phasellus elit augue, cursus eu ante nec, vestibulum adipiscing mi. Nunc adipiscing nibh risus, sed auctor sapien sodales in. Morbi in purus diam. In id consequat velit, eget sodales enim. Nam a massa sed orci blandit interdum eget et ligula. Pellentesque laoreet semper vulputate.</p>
+
+    <p>Proin laoreet molestie mi ac mattis. Curabitur velit lorem, euismod eget leo sed, imperdiet ullamcorper mauris. Fusce posuere dapibus eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper massa lectus, et tempor orci dapibus non. Pellentesque id enim commodo, scelerisque augue in, pharetra purus. Donec leo odio, consequat non tellus tincidunt, rhoncus porta urna.</p>
+
+    <p>Aenean tincidunt sed metus et mollis. Pellentesque tristique risus ac suscipit ornare. Sed a tempor nisl. Nam imperdiet mauris vel nunc varius, id volutpat elit porta. Etiam eu consectetur dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean sollicitudin fermentum nulla, eu ultricies orci imperdiet sed. Cras vitae quam blandit quam volutpat tincidunt vel vel quam. Ut id dictum nisl, nec commodo augue. Donec sed imperdiet arcu, nec ullamcorper ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis id egestas est. Pellentesque eleifend, nisi quis eleifend blandit, lacus ligula tempus quam, non sagittis eros tortor vel massa. Duis posuere pellentesque arcu in sollicitudin.</p>
+  </section>
+</article>
