changes have made

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <div class="background">
     </div>
-    <h1 class="main-header">MIZORAM FIRST</h1>
+    
     
     <article class="wrapper">
+        <h1 class="main-heading">MIZORAM FIRST</h1>
       <header>
-        <h1 class="pageTitle">CONCEPT NOTE</h1>
-        <h2 class="pageSubTitle">MZIORAM FIRST (MF)</h2>
+        <h2 class="pageTitle">CONCEPT NOTE</h2>
+        <h3 class="pageSubTitle">MZIORAM FIRST (MF)</h3>
       </header>
       <section>
         <p>Proin laoreet molestie mi ac mattis. Curabitur velit lorem, euismod eget leo sed, imperdiet ullamcorper mauris. Fusce posuere dapibus eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper massa lectus, et tempor orci dapibus non. Pellentesque id enim commodo, scelerisque augue in, pharetra purus. Donec leo odio, consequat non tellus tincidunt, rhoncus porta urna.</p>
