--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h3 class="pageSubTitle">MZIORAM FIRST (MF)</h3>
       </header>
       <section>
+        <h3 class="sub-heading">Mizoram First Awmzia</h3>
         <p>Proin laoreet molestie mi ac mattis. Curabitur velit lorem, euismod eget leo sed, imperdiet ullamcorper mauris. Fusce posuere dapibus eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper massa lectus, et tempor orci dapibus non. Pellentesque id enim commodo, scelerisque augue in, pharetra purus. Donec leo odio, consequat non tellus tincidunt, rhoncus porta urna.</p>
         <p>Khawvelah hnam boral tam tak an awm tawh a. Ram hmangaihtu leh hnam tungdingtu mi ropui tak tak, Bismarck, Garibaldi, Abraham Lincoln, Mahatma Gandhi, etc. te hming chu khawvel awm chhungin a dai tawh lo vang. Miin an hnam hmangaih avangin an nun hial an lo hlan tawh thin a. Keini ngei pawh kan pi leh pu, kan rual uten an nunna hial an lo hlan tawh azara he ram hi nei thei kan ni. An hnam tana an rinawmzia kan hriat, Japanese leh Israeli te hi tuman an ngainep thei lo. Khawvela ram te takte, mihring pawh tam lo mah nise khawvela ram changkang zinga  chhiar tel an ni. A chhan an sawi tam tak zingah an hnam tana thahnemngaihna hi sawi lar pawl ber a ni thin.</p>
         <p>Mizo hnam pawh tlemte kan ni a, India sorkar hnuaiah kan la awm lehnghal. Kan chhehvelah keini aia tam leh fing zawkte, kan sakhua leh culture nena inang reng reng loten min hual vel a. Kan ram min neihsak chak em emte kan chenpui reng bawk. Chutih lai chuan Mizoram neitute chuan hnam hmangaihna thinlung tak tak pu lovin, mahni hlawkna chauh umin, tun atanga kum 10 chauh pawh kan thlir pha lo emaw tih mai turin kan khawsa a. Tun dinhmunah chuan a ram neitute ngei hi, inhlawhfa, mi tana hnathawk ang maiin kan thawk a. Tlemte thawha tam tak hlawh tum tam tak kan awm tawh. Hnam dang ni lovin keimahni ngeiina kan tih hi kan ram tichhetu, kan tu leh fate tana chenna tlak loha kan ram siam tur, keini kan damlai ngei pawha a chhiatna rah kan seng tur a ni fo. A chhan chu mi tu emawin hlawk a tum vang a ni thin. Hetianga kan kal chhoh zel chuan kan ram tichhe tur hian hnam dang kan mamawh lo; keimahni ngeiin, kan kut ngeiin kan suasam mek a ni.</p>
@@ -40,6 +41,7 @@
             <li>Mitinin kan chanvo dik tak kan chan theih nana dan rorelna ('rule of law' leh 'principle of justice') kan rama a lal ber zel theih nana hma lak.</li>
             <li>Eirukna leh ram leh hnam him lohna tur thil dodal.</li>
         </ol>
+        <span class="tagline">I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.</span>
     </section>
     </article>
     
