--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <article class="wrapper">
         <h1 class="main-heading">MIZORAM FIRST</h1>
       <header>
-        <h2 class="pageTitle">CONCEPT NOTE</h2>
-        <h3 class="pageSubTitle">MZIORAM FIRST (MF)</h3>
+         <h3 class="pageSubTitle">CONCEPT NOTE</h3>
       </header>
       <section>
         <h3 class="sub-heading">Mizoram First Awmzia</h3>
