--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     
     <article class="wrapper">
-        <h1 class="main-heading">MIZORAM FIRST</h1>
+        <h1 class="pageTitle">MIZORAM FIRST</h1>
       <header>
          <h3 class="pageSubTitle">CONCEPT NOTE</h3>
       </header>
