--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>‘Mizoram First’ rilru put hi midang tan ni lovin, keimahni tan ṭheuh, kan chhungkua, kan veng, khawtlang leh hnam tan a tul a ni. He ram lo hi ram dang kan nei lo a, kan nei dawn hek lo. Kan hnam leh kan thlahte tana chenna tlak ram siam hi mitin mawhphurhna a ni tih mipui hriat thar tir hi ‘MIZORAM FIRST’ awm chhan a ni.</p>
         <h3 class="sub-heading">Mission and Vision:</h3>
         <p>Mi tha leh dik, ram hmangaihtu an lo chhuah theihna tura kawng sial leh a chhe lai siam that.</p>
-        <h3 class="sub-heading">Thil tum (Objectives):</h3>
+        <h3 class="sub-heading">Thil tum (Objectives)</h3>
         <ol>
             <li>Kan ram leh hnam hmangaihna rilru dik tak (Mizoram dah hmasak berna rilru) pu tura infuih thar.</li>
             <li>Mizo ngaihhlut thiltha (values) vawn nun leh chawi lar thar leh.</li>
