--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
 <div class="container my-5">
   <div class="p-5 text-center bg-body-tertiary rounded-3">
     <svg class="bi mt-4 mb-3" style="color: var(--bs-indigo);" width="100" height="100"><use xlink:href="#bootstrap"/></svg>
-    <h1 class="text-body-emphasis">Jumbotron with icon</h1>
+    <h1 class="text-body-emphasis">MIZORAM FIRST</h1>
     <p class="col-lg-8 mx-auto fs-5 text-muted">
-      This is a custom jumbotron featuring an SVG image at the top, some longer text that wraps early thanks to a responsive <code>.col-*</code> class, and a customized call to action.
+        I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.
     </p>
     <div class="d-inline-flex gap-2 mb-5">
       <button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
