--- a/index.html
+++ b/index.html
@@ -190,12 +190,18 @@
 
 <div class="container my-5">
   <div class="position-relative p-5 text-center text-muted bg-body border border-dashed rounded-5">
-    <button type="button" class="position-absolute top-0 end-0 p-3 m-3 btn-close bg-secondary bg-opacity-10 rounded-pill" aria-label="Close"></button>
-    <svg class="bi mt-5 mb-3" width="48" height="48"><use xlink:href="#check2-circle"/></svg>
-    <h1 class="text-body-emphasis">Placeholder jumbotron</h1>
+    <!-- <button type="button" class="position-absolute top-0 end-0 p-3 m-3 btn-close bg-secondary bg-opacity-10 rounded-pill" aria-label="Close"></button> -->
+    <!-- <svg class="bi mt-5 mb-3" width="48" height="48"><use xlink:href="#check2-circle"/></svg> -->
+    <!-- <h1 class="text-body-emphasis">Placeholder jumbotron</h1>
     <p class="col-lg-6 mx-auto mb-4">
       This faded back jumbotron is useful for placeholder content. It's also a great way to add a bit of context to a page or section when no content is available and to encourage visitors to take a specific action.
-    </p>
+    </p> -->
+    <h1 class="text-body-emphasis">Mizoram First Awmzia</h1>
+        <p>‘Mizoram First’ tih chu ‘Mizoram dah pawimawh hmasak berna rilru’ tihna a ni ber a. Mimal hlawkna, party bil leh party member-te hlawkna aia Mizoram leh mipui thatna tur ngaihpawimawh hmasak duhna rilru, Mizoram tana neitu rilru putna hi ‘Mizoram First’ tih in a kawh ber chu a ni. Mizoram hi kan ram, kan ta a ni. A neitu kan nih avangin kan ram chhiat-ṭhat hi kan kuta awm a ni. Mizo hnam dinchhuahna leh boralna pawh Mizote kutah a awm. Chuvangin Mizo ram leh hnam dah pawimawh hmasa ber chunga hna thawh hi mitin mawhphurhna a ni tih hriatna hi a ni.</p>
+        <p>Khawvelah hnam boral tam tak an awm tawh a. Ram hmangaihtu leh hnam tungdingtu mi ropui tak tak, Bismarck, Garibaldi, Abraham Lincoln, Mahatma Gandhi, etc. te hming chu khawvel awm chhungin a dai tawh lo vang. Miin an hnam hmangaih avangin an nun hial an lo hlan tawh thin a. Keini ngei pawh kan pi leh pu, kan rual uten an nunna hial an lo hlan tawh azara he ram hi nei thei kan ni. An hnam tana an rinawmzia kan hriat, Japanese leh Israeli te hi tuman an ngainep thei lo. Khawvela ram te takte, mihring pawh tam lo mah nise khawvela ram changkang zinga  chhiar tel an ni. A chhan an sawi tam tak zingah an hnam tana thahnemngaihna hi sawi lar pawl ber a ni thin.</p>
+        <p>Mizo hnam pawh tlemte kan ni a, India sorkar hnuaiah kan la awm lehnghal. Kan chhehvelah keini aia tam leh fing zawkte, kan sakhua leh culture nena inang reng reng loten min hual vel a. Kan ram min neihsak chak em emte kan chenpui reng bawk. Chutih lai chuan Mizoram neitute chuan hnam hmangaihna thinlung tak tak pu lovin, mahni hlawkna chauh umin, tun atanga kum 10 chauh pawh kan thlir pha lo emaw tih mai turin kan khawsa a. Tun dinhmunah chuan a ram neitute ngei hi, inhlawhfa, mi tana hnathawk ang maiin kan thawk a. Tlemte thawha tam tak hlawh tum tam tak kan awm tawh. Hnam dang ni lovin keimahni ngeiina kan tih hi kan ram tichhetu, kan tu leh fate tana chenna tlak loha kan ram siam tur, keini kan damlai ngei pawha a chhiatna rah kan seng tur a ni fo. A chhan chu mi tu emawin hlawk a tum vang a ni thin. Hetianga kan kal chhoh zel chuan kan ram tichhe tur hian hnam dang kan mamawh lo; keimahni ngeiin, kan kut ngeiin kan suasam mek a ni.</p>
+        <p>Chuvangin, tuna Mizoramin a mamawh ber chu ram leh hnam hmangaihna (patriotism), mahni hlawkna tur aia ram leh hnam damna tur dah hmasak, Kristianna hming tibawrhbangtu ni lova chawisang tura rinawmna, dikna leh huaisenna nena ke pen a ni. Chu chu ‘MIZORAM FIRST’ in a tum ril ber a ni.</p>
+        
     <button class="btn btn-primary px-5 mb-5" type="button">
       Call to action
     </button>
