--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <p class="col-lg-8 mx-auto fs-5 text-muted">
         I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.
     </p>
-    <div class="d-inline-flex gap-2 mb-5">
+    <!-- <div class="d-inline-flex gap-2 mb-5">
       <button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
         Call to action
         <svg class="bi ms-2" width="24" height="24"><use xlink:href="#arrow-right-short"/></svg>
@@ -182,7 +182,7 @@
       <button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button">
         Secondary link
       </button>
-    </div>
+    </div> -->
   </div>
 </div>
 
@@ -197,16 +197,29 @@
       This faded back jumbotron is useful for placeholder content. It's also a great way to add a bit of context to a page or section when no content is available and to encourage visitors to take a specific action.
     </p> -->
     <h3 class="text-body-emphasis">MIZORAM FIRST Awmzia</h3>
-    <p class="col-lg-6 mx-auto mb-4">‘Mizoram First’ tih chu ‘Mizoram dah pawimawh hmasak berna rilru’ tihna a ni ber a. Mimal hlawkna, party bil leh party member-te hlawkna aia Mizoram leh mipui thatna tur ngaihpawimawh hmasak duhna rilru, Mizoram tana neitu rilru putna hi ‘Mizoram First’ tih in a kawh ber chu a ni. Mizoram hi kan ram, kan ta a ni. A neitu kan nih avangin kan ram chhiat-ṭhat hi kan kuta awm a ni. Mizo hnam dinchhuahna leh boralna pawh Mizote kutah a awm. Chuvangin Mizo ram leh hnam dah pawimawh hmasa ber chunga hna thawh hi mitin mawhphurhna a ni tih hriatna hi a ni.</p>
-    <p class="col-lg-6 mx-auto mb-4">Khawvelah hnam boral tam tak an awm tawh a. Ram hmangaihtu leh hnam tungdingtu mi ropui tak tak, Bismarck, Garibaldi, Abraham Lincoln, Mahatma Gandhi, etc. te hming chu khawvel awm chhungin a dai tawh lo vang. Miin an hnam hmangaih avangin an nun hial an lo hlan tawh thin a. Keini ngei pawh kan pi leh pu, kan rual uten an nunna hial an lo hlan tawh azara he ram hi nei thei kan ni. An hnam tana an rinawmzia kan hriat, Japanese leh Israeli te hi tuman an ngainep thei lo. Khawvela ram te takte, mihring pawh tam lo mah nise khawvela ram changkang zinga  chhiar tel an ni. A chhan an sawi tam tak zingah an hnam tana thahnemngaihna hi sawi lar pawl ber a ni thin.</p>
-    <p class="col-lg-6 mx-auto mb-4">Mizo hnam pawh tlemte kan ni a, India sorkar hnuaiah kan la awm lehnghal. Kan chhehvelah keini aia tam leh fing zawkte, kan sakhua leh culture nena inang reng reng loten min hual vel a. Kan ram min neihsak chak em emte kan chenpui reng bawk. Chutih lai chuan Mizoram neitute chuan hnam hmangaihna thinlung tak tak pu lovin, mahni hlawkna chauh umin, tun atanga kum 10 chauh pawh kan thlir pha lo emaw tih mai turin kan khawsa a. Tun dinhmunah chuan a ram neitute ngei hi, inhlawhfa, mi tana hnathawk ang maiin kan thawk a. Tlemte thawha tam tak hlawh tum tam tak kan awm tawh. Hnam dang ni lovin keimahni ngeiina kan tih hi kan ram tichhetu, kan tu leh fate tana chenna tlak loha kan ram siam tur, keini kan damlai ngei pawha a chhiatna rah kan seng tur a ni fo. A chhan chu mi tu emawin hlawk a tum vang a ni thin. Hetianga kan kal chhoh zel chuan kan ram tichhe tur hian hnam dang kan mamawh lo; keimahni ngeiin, kan kut ngeiin kan suasam mek a ni.</p>
-    <p class="col-lg-6 mx-auto mb-4">Chuvangin, tuna Mizoramin a mamawh ber chu ram leh hnam hmangaihna (patriotism), mahni hlawkna tur aia ram leh hnam damna tur dah hmasak, Kristianna hming tibawrhbangtu ni lova chawisang tura rinawmna, dikna leh huaisenna nena ke pen a ni. Chu chu ‘MIZORAM FIRST’ in a tum ril ber a ni.</p>
+    <p>‘Mizoram First’ tih chu ‘Mizoram dah pawimawh hmasak berna rilru’ tihna a ni ber a. Mimal hlawkna, party bil leh party member-te hlawkna aia Mizoram leh mipui thatna tur ngaihpawimawh hmasak duhna rilru, Mizoram tana neitu rilru putna hi ‘Mizoram First’ tih in a kawh ber chu a ni. Mizoram hi kan ram, kan ta a ni. A neitu kan nih avangin kan ram chhiat-ṭhat hi kan kuta awm a ni. Mizo hnam dinchhuahna leh boralna pawh Mizote kutah a awm. Chuvangin Mizo ram leh hnam dah pawimawh hmasa ber chunga hna thawh hi mitin mawhphurhna a ni tih hriatna hi a ni.</p>
+    <p>Khawvelah hnam boral tam tak an awm tawh a. Ram hmangaihtu leh hnam tungdingtu mi ropui tak tak, Bismarck, Garibaldi, Abraham Lincoln, Mahatma Gandhi, etc. te hming chu khawvel awm chhungin a dai tawh lo vang. Miin an hnam hmangaih avangin an nun hial an lo hlan tawh thin a. Keini ngei pawh kan pi leh pu, kan rual uten an nunna hial an lo hlan tawh azara he ram hi nei thei kan ni. An hnam tana an rinawmzia kan hriat, Japanese leh Israeli te hi tuman an ngainep thei lo. Khawvela ram te takte, mihring pawh tam lo mah nise khawvela ram changkang zinga  chhiar tel an ni. A chhan an sawi tam tak zingah an hnam tana thahnemngaihna hi sawi lar pawl ber a ni thin.</p>
+    <p>Mizo hnam pawh tlemte kan ni a, India sorkar hnuaiah kan la awm lehnghal. Kan chhehvelah keini aia tam leh fing zawkte, kan sakhua leh culture nena inang reng reng loten min hual vel a. Kan ram min neihsak chak em emte kan chenpui reng bawk. Chutih lai chuan Mizoram neitute chuan hnam hmangaihna thinlung tak tak pu lovin, mahni hlawkna chauh umin, tun atanga kum 10 chauh pawh kan thlir pha lo emaw tih mai turin kan khawsa a. Tun dinhmunah chuan a ram neitute ngei hi, inhlawhfa, mi tana hnathawk ang maiin kan thawk a. Tlemte thawha tam tak hlawh tum tam tak kan awm tawh. Hnam dang ni lovin keimahni ngeiina kan tih hi kan ram tichhetu, kan tu leh fate tana chenna tlak loha kan ram siam tur, keini kan damlai ngei pawha a chhiatna rah kan seng tur a ni fo. A chhan chu mi tu emawin hlawk a tum vang a ni thin. Hetianga kan kal chhoh zel chuan kan ram tichhe tur hian hnam dang kan mamawh lo; keimahni ngeiin, kan kut ngeiin kan suasam mek a ni.</p>
+    <p>Chuvangin, tuna Mizoramin a mamawh ber chu ram leh hnam hmangaihna (patriotism), mahni hlawkna tur aia ram leh hnam damna tur dah hmasak, Kristianna hming tibawrhbangtu ni lova chawisang tura rinawmna, dikna leh huaisenna nena ke pen a ni. Chu chu ‘MIZORAM FIRST’ in a tum ril ber a ni.</p>
     <h3 class="text-body-emphasis">Enge MIZORAM FIRST in a tum?</h3>
     <p>Mizote hi hnam tha tak kan ni. Kan induh khawp lo viau naa Mizo zingah ram leh hnam vei tak tak, ram leh hnam chhan nana rilru leh tha seng thin leh sen huam mi tam tak an awm. Kan rama thil tha lo kan hmuh tam tak hi kan sual vanga kan tih ai mahin kan hriat loh avanga kan tih a ni fo. Min chimtu boruak avangin, kan pi leh pute ngaihhlut zawng thil tha, ‘sem sem dam dam, ei bil thi thi’ tihte, ‘dam leh tlang khatah, thih leh ruam khatah’ tihte chu kan lo mausam tawhin, sum ngaihhlutna leh duhnain mi tam tak mit a tidel tawh niin a lang. Democracy rama vote thlak theihna chanvo kan neih pawh a hlutna hre lo tam tak kan awm a, kan vote hlu tak hralh ta mai mai pawh kan awm mek a ni.</p>
     <p>Mizote hi hnam tha tak kan ni. Kan induh khawp lo viau naa Mizo zingah ram leh hnam vei tak tak, ram leh hnam chhan nana rilru leh tha seng thin leh sen huam mi tam tak an awm. Kan rama thil tha lo kan hmuh tam tak hi kan sual vanga kan tih ai mahin kan hriat loh avanga kan tih a ni fo. Min chimtu boruak avangin, kan pi leh pute ngaihhlut zawng thil tha, ‘sem sem dam dam, ei bil thi thi’ tihte, ‘dam leh tlang khatah, thih leh ruam khatah’ tihte chu kan lo mausam tawhin, sum ngaihhlutna leh duhnain mi tam tak mit a tidel tawh niin a lang. Democracy rama vote thlak theihna chanvo kan neih pawh a hlutna hre lo tam tak kan awm a, kan vote hlu tak hralh ta mai mai pawh kan awm mek a ni.</p>
     <p>Heng avang hian ngaihhlut tur dik inkawhhmuh thar leha, kan pi leh pute atanga kan chhawm nunze mawite chhawm tura inzirtir thar te, mahni hlawkna aia ram leh hnam tana tha tur ngaih pawimawh hmasakte, eng hna thawk pawhin Mizoram tana a tih theih tawk enge tih ngaihtuaha a lo hlan ve te hi a lo tul ta a ni. Sorkar hnathawk, politician, sumdawng, loneitu, zirlai, tupawh hian mahni hlawkna aia Mizoram leh a hnam puite hmakhua a ngaihtuah hmasak phawt chuan Mizoram hi a dam leh thei a ni.</p>
     <p>‘Mizoram First’ rilru put hi midang tan ni lovin, keimahni tan ṭheuh, kan chhungkua, kan veng, khawtlang leh hnam tan a tul a ni. He ram lo hi ram dang kan nei lo a, kan nei dawn hek lo. Kan hnam leh kan thlahte tana chenna tlak ram siam hi mitin mawhphurhna a ni tih mipui hriat thar tir hi ‘MIZORAM FIRST’ awm chhan a ni.</p>
-        
+    <h3 class="text-body-emphasis">Mission and Vision</h3>
+    <p>Mi tha leh dik, ram hmangaihtu an lo chhuah theihna tura kawng sial leh a chhe lai siam that.</p>
+    <h3 class="text-body-emphasis">Thil tum (Objectives)</h3>
+    <ol>
+        <li>Kan ram leh hnam hmangaihna rilru dik tak (Mizoram dah hmasak berna rilru) pu tura infuih thar.</li>
+        <li>Mizo ngaihhlut thiltha (values) vawn nun leh chawi lar thar leh.</li>
+        <li>Sorkar tha siam thei tura mipui buatsaih leh zirtir.</li>
+        <li>Thalaite ram siamthatna hna thawk tura cho chhuah leh thawhpui.</li>
+        <li>Kan ram leh hnam hmakhua atana ngaihtuahna senga thil tha tur chhawpchhuah dan ngaihtuah.</li>
+        <li>Ram hmangaihtu leh veitu zawng zawng an tel theihna tur hmun (platform) siam.</li>
+        <li>Mitinin kan chanvo dik tak kan chan theih nana dan rorelna ('rule of law' leh 'principle of justice') kan rama a lal ber zel theih nana hma lak.</li>
+        <li>Eirukna leh ram leh hnam him lohna tur thil dodal.</li>
+    </ol>
+    <span class="tagline">I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.</span>
     <!-- <button class="btn btn-primary px-5 mb-5" type="button">
       Call to action
     </button> -->
@@ -214,7 +227,7 @@
 </div>
 
 <div class="b-example-divider"></div>
-
+<!-- 
 <div class="my-5">
   <div class="p-5 text-center bg-body-tertiary">
     <div class="container py-5">
@@ -235,7 +248,7 @@
       This is a simple Bootstrap jumbotron that sits within a <code>.container</code>, recreated with built-in utility classes.
     </p>
   </div>
-</div>
+</div> -->
 
 <div class="b-example-divider"></div>
 <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
