--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <div class="container my-5">
   <div class="p-5 text-center bg-body-tertiary rounded-3">
     <svg class="bi mt-4 mb-3" style="color: var(--bs-indigo);" width="100" height="100"><use xlink:href="#bootstrap"/></svg>
-    <h1 class="text-body-emphasis">MIZORAM FIRST</h1>
+    <h1 class="display-1">MIZORAM FIRST</h1>
     <p class="col-lg-8 mx-auto fs-5 text-muted">
         I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.
     </p>
@@ -209,7 +209,7 @@
     <h3 class="text-body-emphasis">Mission and Vision</h3>
     <p>Mi tha leh dik, ram hmangaihtu an lo chhuah theihna tura kawng sial leh a chhe lai siam that.</p>
     <h3 class="text-body-emphasis">Thil tum (Objectives)</h3>
-    <ol>
+    <ol class="list-unstyled">
         <li>Kan ram leh hnam hmangaihna rilru dik tak (Mizoram dah hmasak berna rilru) pu tura infuih thar.</li>
         <li>Mizo ngaihhlut thiltha (values) vawn nun leh chawi lar thar leh.</li>
         <li>Sorkar tha siam thei tura mipui buatsaih leh zirtir.</li>
