--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 <div class="container my-5">
   <div class="p-5 text-center bg-body-tertiary rounded-3">
-    <svg class="bi mt-4 mb-3" style="color: var(--bs-indigo);" width="100" height="100"><use xlink:href="#bootstrap"/></svg>
+    <!-- <svg class="bi mt-4 mb-3" style="color: var(--bs-indigo);" width="100" height="100"><use xlink:href="#bootstrap"/></svg> -->
     <h1 class="display-1">MIZORAM FIRST</h1>
     <p class="col-lg-8 mx-auto fs-5 text-muted">
         I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.
